fixed prof pricture spacing

--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -113,3 +113,9 @@ form h1 {
   font-family: 'Righteous', cursive;
   cursor: pointer;
 }
+
+.photo-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
